# evolastra

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  netlify.toml  package.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  star-tracker.yml
apps/api/: AGENTS.md
apps/web/: AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
config/: otel-collector.yaml
deploy/: Caddyfile.example  README.md
docs/: README.md  getting-started.md
docs/architecture/: adr-renderer-selection.md  decision-log.md  invariants.md  overview.md  repository-map.md  semantic-model.md  shared-contract.md  standards-mapping.md  telemetry-model.md  visualization-model.md
docs/assets/: THIRD_PARTY_ASSETS.md  asset-ledger.csv  asset-manifest.json  originality-review.md  verify-assets.md  verify-assets.ps1  visual-direction.md
docs/audit/: existing-implementation-audit.md  final-verification.md  gap-matrix.md  quality-report.md  risk-register.md
docs/benchmarks/: renderer-comparison.md  renderer-fixture.v1.json  renderer-recommendation.md
docs/deployment/: hosted-team.md  hosted-viewer.md  local-private.md
docs/development/: contributing.md  harness.md  performance.md  testing.md
docs/event-protocol/: asyncapi.yaml  cloud-events.md
docs/integration/: README.md  a2a.md  ag-ui.md  codex-hooks.md  codex-sdk.md  generic-sdk.md  mlflow.md  openai-agents.md  openlineage.md  opentelemetry.md
docs/plans/: README.md  template.md
docs/security/: asset-supply-chain.md  privacy-model.md  redaction-policy.md  responsible-use.md  security_best_practices_report.md  threat-model.md
docs/user-guide/: artifacts.md  findings.md  galaxy.md  multiplayer.md  obsidian.md  portable-analyses.md  replay.md  shipyard.md
examples/integrations/: python_sdk_demo.py
integrations/: __init__.py  a2a.py  ag_ui.py  codex_app_server.py  codex_hooks.py  codex_sdk.py  core.py  jsonl.py  openai_agents.py  openlineage.py  otlp.py
migrations/: env.py
migrations/versions/: 20260717_0001_initial.py  20260718_0002_multiplayer.py
schemas/: AGENTS.md
schemas/events/: artifact-created.v1.schema.json  durable-event-envelope.v1.schema.json  node-created.v1.schema.json  run-created.v1.schema.json  semantic-event-v1.json
schemas/examples/: artifact-created.v1.json  node-created.v1.json  run-created.v1.json
scripts/: benchmark.py  bootstrap.ps1  dev.py  harness.py  security_scan.py  setup.ps1  simulate_stad_multiplayer.py  update_star_badge.py  verify.py  verify_assets.py
skills/evolastra/: SKILL.md
tests/: AGENTS.md  test_api.py  test_bootstrap.py  test_codex_live.py  test_event_store.py  test_evolastra_skill.py  test_harness.py  test_license.py  test_local_private.py  test_multiplayer.py  test_public_showcase.py  test_reducer.py  test_security.py  test_shipyard.py  test_stad_multiplayer_simulation.py  test_static_viewer_privacy.py
tests/chaos/: test_ingestion_recovery.py
tests/contracts/: test_event_schemas.py
tests/integrations/: test_integrations.py
tests/property/: conftest.py  test_event_invariants.py
tests/quality/: conftest.py  test_exports.py  test_replay_and_projection.py  test_simulator_contract.py  (+1 more)
(+105 files in other folders)
