[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolastra-observatory"
version = "0.1.0"
description = "Evolastra: a live observatory for agentic analysis, provenance, and evidence."
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.4",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "opentelemetry-api==1.36.0",
  "opentelemetry-sdk==1.36.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.31",
  "sqlalchemy==2.0.41",
  "starlette==1.3.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.7.0",
  "jsonschema==4.25.1",
  "mypy==1.17.1",
  "pip-audit==2.10.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-cov==6.2.1",
  "ruff==0.12.5",
  "setuptools==83.0.0",
  "wheel==0.47.0",
]

[project.scripts]
evolastra = "asterism_api.cli:main"
asterism = "asterism_api.cli:main"

[tool.setuptools]
packages = ["asterism_api", "integrations"]
package-dir = {asterism_api = "apps/api/asterism_api", integrations = "integrations"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --basetemp=.pytest-tmp"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008", "E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/integrations/test_integrations.py" = ["E402"]
"examples/integrations/python_sdk_demo.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["asterism_api"]
