[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolastra-observatory"
version = "0.1.0"
description = "Evolastra: a live observatory for agentic analysis, provenance, and evidence."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "opentelemetry-api==1.44.0",
  "opentelemetry-sdk==1.44.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.32",
  "sqlalchemy==2.0.51",
  "starlette==1.3.1",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.7.0",
  "jsonschema==4.26.0",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
  "setuptools==83.0.0",
  "wheel==0.47.0",
]

[project.scripts]
evolastra = "asterism_api.cli:main"
asterism = "asterism_api.cli:main"

[tool.setuptools]
packages = ["asterism_api", "integrations"]
package-dir = {asterism_api = "apps/api/asterism_api", integrations = "integrations"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --basetemp=.pytest-tmp"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008", "E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/integrations/test_integrations.py" = ["E402"]
"examples/integrations/python_sdk_demo.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["asterism_api"]
